packages/kit/test/apps/basics/src/routes/errors/load-error-page-options/+error.svelte
<script lang="ts">
	import { page } from '$app/state';
</script>

<h1>{page.error?.message}</h1>
